--- a/htdocs/Fishing-Pufferfish.html
+++ b/htdocs/Fishing-Pufferfish.html
@@ -115,6 +115,15 @@
 			</tr>			
 		</table>
 		
+		<div style="background-color:#99DDFF; height: 500px; width:1020px; margin: -30px 0px 62px 130px;">
+			<h1>Fishing Guide</h1>
+			<video style="margin-left: 100px; height:400; width:900;" controls autoplay>
+				<source src="../mmfiles/FishingGuide.mp4" type="video/mp4">
+				<source src="../mmfiles/FishingGuide.ogg" type="video/ogg">
+				Your browser does not support the video tag.
+			</video>
+		</div>
+		
 		<footer style="background-color:#99DDFF; height:180px; padding:2px;margin:-8px;">
 		
 			<div style="margin-left:30px;width:270px;">
