fixed links and footer

--- a/2QProjArgonPera/htdocs/Mining-Quartz.html
+++ b/2QProjArgonPera/htdocs/Mining-Quartz.html
@@ -22,10 +22,10 @@
 			<h1 style="margin-top: -68px; margin-left: 200px;"> Stardew Valley Game Guide</h1>
 		</header>
 		<nav>
-			<a href="index.html" style="float:right; margin:-70px 220px; background-color:#FFFFCC; padding:5px" class="button">
+			<a href="../index.html" style="float:right; margin:-70px 220px; background-color:#FFFFCC; padding:5px" class="button">
 				Homepage
 			</a>
-			<a href="index.html#ToC" style="float:right; margin:-70px 50px; background-color:#FFFFCC; padding:5px" class="button">
+			<a href="../index.html#ToC" style="float:right; margin:-70px 50px; background-color:#FFFFCC; padding:5px" class="button">
 				Table of Contents
 			</a>
 			<a href="#Us" style="float:right; margin:-70px -70px; background-color:#FFFFCC; padding:5px" class="button">
@@ -76,7 +76,7 @@
 		
 		</div>
 		
-		<footer style="background-color:#99DDFF; height:180px; padding:2px;margin:-8px;">
+		<footer>
 		
 			<div style="margin-left:30px;width:270px;">
 				<h4 style="margin-left:80;">About us</h4>
