Finshed new page and added transformation/animation.

--- a/2QProjArgonPera/htdocs/Characters-Shane.html
+++ b/2QProjArgonPera/htdocs/Characters-Shane.html
@@ -10,6 +10,7 @@
 		<meta name="author" content="Akisha Pera">
 		<meta name="keywords" content="Stardew Valley Shane">
 		<meta name="created" content="1-16-2022">
+		<meta name="revised" content="1-21-2022">
 		<style>
 		
 		</style>
@@ -33,13 +34,16 @@
 			</a>
 		</nav>
 		<div style="margin:10px; margin-top:100px;">
-			<h1>Shane</h1>
+			<h1 class="title">Shane</h1>
 			<a href="../images/Shane.png">
 				<img src="../images/Shane.png" alt="Shane" style="margin: 10px;" height=235px width=235px title="From Stardew Valley Wiki">
 			</a>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 270px; width:605px; margin: -300px 0px 62px 300px;" >
+		<div class="SpouseActions" style="background-color:#99DDFF; margin: -300px 0px 0px 300px;border-radius: 20px 20px 20px 20px;">
+		</div>
+		
+		<div style="background-color:#99DDFF; height: 320px; width:480px; margin: -300px 0px 0px 500px;border-radius: 20px 20px 20px 20px;" >
 			<p class="tagline">“I'm renting my room from Marnie at a really good price. It's small but I can't complain. 
 				If I could reset my life maybe I'd start a chicken farm. Only free-range eggs of course.” — Shane
 			</p>
@@ -50,11 +54,11 @@
 			<p><em>Note:</em> Shane's relationship with Jas is revealed in only one place in the game: a rare dialog from Jas that occurs only on Sundays.</p>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 375px; width:300px; margin: -380px 0px 62px 950px;" >
+		<div style="background-color:#99DDFF; height: 375px; width:300px; margin: -350px 0px 62px 995px;border-radius: 20px 20px 20px 20px;" >
 		
-		<table style="border: #FFFFCC 2px solid; height: 375px; width:300px;">
+		<table style="border: #FFFFCC 2px solid; height: 375px; width:300px;border-radius: 20px 20px 20px 20px;">
 			<tr style="background-color:#FFFFE6;">
-				<th colspan="2">Information</th>
+				<th colspan="2" style="border-radius: 20px 20px 0px 0px;">Information</th>
 			</tr>
 			<tr>
 				<td style="background-color:#FFFFE6;width:50px;">Birthday:</td>
@@ -80,7 +84,7 @@
 				<td> Yes</td>
 			</tr>
 			<tr>
-				<td rowspan="4" style="background-color:#FFFFE6;">Likes:</td>
+				<td rowspan="4" style="background-color:#FFFFE6;border-radius: 0px 0px 0px 20px;">Likes:</td>
 				<td><div class="Beer"></div> <div style="margin-left:40px;margin-top:-25px;">Beer</div></td>
 			</tr>
 			<tr>
