--- a/2QProjArgonPera/htdocs/Fishing-Pufferfish.html
+++ b/2QProjArgonPera/htdocs/Fishing-Pufferfish.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="Akisha Pera">
 		<meta name="keywords" content="Stardew Valley Pufferfish">
 		<meta name="created" content="11-04-2021">
-		<meta name="revised" content="01-16-2022">
+		<meta name="revised" content="01-21-2022">
 		<style>
 		
 		</style>
@@ -34,13 +34,13 @@
 			</a>
 		</nav>
 		<div style="margin:10px; margin-top:100px;">
-			<h1>Pufferfish</h1>
+			<h1 class="title">Pufferfish</h1>
 			<a href="../images/Pufferfish.png">
 				<img src="../images/Pufferfish.png" alt="Pufferfish" style="margin: 10px;" height=235px width=235px title="From Stardew Valley Wiki">
 			</a>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 320px; width:400px; margin: -290px 0px 62px 300px;" >
+		<div style="background-color:#99DDFF; height: 310px; width:410px; margin: -290px 0px 62px 300px;border-radius: 20px 20px 20px 20px;" >
 			<p class="tagline">Inflates when threatened.</p>
 			<p>The Pufferfish is a fish that can be caught in the ocean on sunny summer days between 12pm and 4pm, 
 				or on Ginger Island during any season on Island West (ocean), South, Southeast, and in the Pirate Cove.
@@ -49,11 +49,11 @@
 			<p>	The Pufferfish and the Blobfish are the only fishing rod fishes that have a "floater" behavior in the fishing mini-game.</p>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 260px; width:190px; margin: -350px 0px 62px 750px;" >
+		<div style="background-color:#99DDFF; height: 260px; width:190px; margin: -350px 0px 62px 750px;border-radius: 20px 20px 20px 20px;" >
 
-		<table style="border: #FFFFCC 2px solid; height: 260px; width:190px;">
+		<table style="border: #FFFFCC 2px solid; height: 260px; width:190px;border-radius: 20px 20px 20px 20px;">
 			<tr style="background-color:#FFFFE6;">
-				<th colspan="2">Information</th>
+				<th colspan="2" style="border-radius: 20px 20px 0px 0px;">Information</th>
 			</tr>
 			<tr>
 				<td style="background-color:#FFFFE6;width:50px;">Season:</td>
@@ -76,7 +76,7 @@
 				<td>Floater</td>
 			</tr>
 			<tr>
-				<td style="background-color:#FFFFE6;width:50px;">Size:</td>
+				<td style="background-color:#FFFFE6;width:50px;border-radius: 0px 0px 0px 20px;">Size:</td>
 				<td>1-37</td>
 			</tr>
 		</table>
@@ -115,7 +115,7 @@
 			</tr>			
 		</table>
 		
-		<div style="background-color:#99DDFF; height: 500px; width:1020px; margin: -30px 0px 62px 130px;">
+		<div style="background-color:#99DDFF; height: 500px; width:1020px; margin: -30px 0px 62px 130px;border-radius: 20px 20px 20px 20px;">
 			<h1>Fishing Guide</h1>
 			<video style="margin-left: 100px; height:400; width:900;" controls autoplay>
 				<source src="../mmfiles/FishingGuide.mp4" type="video/mp4">
