--- a/2QProjArgonPera/htdocs/Location-Fish-Shop.html
+++ b/2QProjArgonPera/htdocs/Location-Fish-Shop.html
@@ -4,12 +4,12 @@
 		
 		<title>Stardew Valley Game Guide </title>
 		<link rel="icon" href="../images/favicon.png" type="image/png" sizes="16x16"> 
-		<link rel="stylesheet" type="text/css" href="../css/CSS-Mining-Quartz.css">
+		<link rel="stylesheet" type="text/css" href="../css/CSS-Location-Fish-Shop.css">
 		
 		<meta charset="UTF-8">
 		<meta name="author" content="Akisha Pera">
-		<meta name="keywords" content="Stardew Valley Quartz">
-		<meta name="created" content="1-16-2022">
+		<meta name="keywords" content="Stardew Valley Fish Shop">
+		<meta name="created" content="1-20-2022">
 		<style>
 		
 		</style>
@@ -39,7 +39,7 @@
 			</a>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 273px; width:505px; margin: -300px 0px 62px 300px;" >
+		<div style="background-color:#99DDFF; height: 262px; width:520px; margin: -300px 0px 62px 300px;border-radius: 20px 20px 20px 20px;" >
 			<p class="tagline">“If the local fishing scene got a bit more lively, I might expand the shop's stock.”-Willy</p>
 			<p>The Fish Shop is the home of Willy. It's located on the docks of The Beach south of Pelican Town. 
 			If the player has not read the letter from Willy sent on Spring 2, then the shop cannot be entered. 
@@ -49,11 +49,11 @@
 			the appropriate skill level is achieved, without needing to wait until the next day.<p/>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 260px; width:220px; margin: -325px 0px 62px 950px;" >
+		<div style="background-color:#99DDFF; height: 260px; width:220px; margin: -325px 0px 62px 950px;border-radius: 20px 20px 20px 20px;" >
 		
-		<table style="border: #FFFFCC 2px solid; height: 260px; width:220px;">
+		<table style="border: #FFFFCC 2px solid; height: 260px; width:220px;border-radius: 20px 20px 20px 20px;">
 			<tr style="background-color:#FFFFE6;">
-				<th colspan="2">Information</th>
+				<th colspan="2" style="border-radius: 20px 20px 0px 0px;">Information</th>
 			</tr>
 			<tr>
 				<td style="background-color:#FFFFE6;width:50px;">Open Hours:</td>
@@ -64,11 +64,120 @@
 				<td> Non-rainy Saturdays (Building Open, no sales)</td>
 			</tr>
 			<tr>
-				<td style="background-color:#FFFFE6;width:50px;">Occupants: </td>
-				<td> <div class="Willy"></div> Willy</td>
+				<td style="background-color:#FFFFE6;width:50px;border-radius: 0px 0px 0px 20px;">Occupants: </td>
+				<td> <div class="Willy"></div><div style="margin-left:60px;margin-top:-25px;"> Willy</div></td>
 			</tr>
 		</table>
 		
+		</div>
+		<div style="background-color:#99DDFF; height: 1149px; width:920px; margin: 0px 0px 62px 150px;border-radius: 20px 20px 20px 20px;" >
+		
+		<table style="border: #FFFFCC 2px solid; height: 1100px; width:920px;border-radius: 0px 0px 20px 20px;">
+			<caption style="border: #FFFFCC 2px solid;font-size:40px; font-weight:bold;background-color:#99DDFF;border-radius: 20px 20px 0px 0px;">Stock</caption>
+			<tr>
+				<th style="background-color:#FFFFCC;height:50px;width:145px;">Item</th>
+				<th style="background-color:#FFFFCC;"> Description</th>
+				<th style="background-color:#FFFFCC;width:70px;"> Price</th>
+				<th style="background-color:#FFFFCC;width:80px;"> Fishing Level Required</th>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Trout"><div style="margin-left:60;">Trout Soup</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Pretty salty.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">250g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">N/A</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Bait"><div style="margin-left:60;">Bait</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Causes fish to bite faster. Must first be attached to a fishing rod.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">5g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 2</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Crabpot"><div style="margin-left:60;">Crab Pot</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Place it in the water, load it with bait, and check the next day to see if you've caught anything. Works in streams, lakes, and the ocean.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">1500g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 3</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Spinner"><div style="margin-left:60;">Spinner</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">The shape makes it spin around in the water. Slightly increases the bite-rate when fishing.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">500g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 6</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Trap"><div style="margin-left:60;">Trap Bobber</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Causes fish to escape slower when you aren't reeling them in.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">500g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 6</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Lead"><div style="margin-left:60;">Lead Bobber</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Adds weight to your "fishing bar", preventing it from bouncing along the bottom.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">200g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 6</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Treasure"><div style="margin-left:60;">Treasure Hunter</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Fish don't escape while collecting treasures. Also slightly increases the chance to find treasures.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">750g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 7</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Cork"><div style="margin-left:60;">Cork Bobber</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Slightly increases the size of your "fishing bar".</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">750g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 7</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Hook"><div style="margin-left:60;">Barbed Hook</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Makes your catch more secure, causing the "fishing bar" to cling to your catch. Works best on slow, weak fish.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">1000g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 8</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="DSpinner"><div style="margin-left:60;">Dressed Spinner</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Makes your catch more secure, causing the "fishing bar" to cling to your catch. Works best on slow, weak fish.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">1000g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 8</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Magnet"><div style="margin-left:60;">Magnet</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Increases the chance of finding treasures when fishing. However, fish aren't crazy about the taste.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">1000g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 9</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Bamboo"><div style="margin-left:60;">Bamboo Pole</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Use in the water to catch fish/td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">500g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">N/A</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Fiberglass"><div style="margin-left:60;">Fiberglass Rod</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Use in the water to catch fish.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">1800g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 2</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Iridium"><div style="margin-left:60;">Iridium Rod</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Use in the water to catch fish</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">7500g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Level 6</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);"><div class="Training"><div style="margin-left:60;">Training Rod</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">It's a lot easier to use than other rods, but can only catch basic fish.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">25g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">N/A</td>
+			</tr>
+			<tr>
+				<td style="background-color:rgba(255, 255, 255, 0.7);border-radius: 0px 0px 0px 20px;"><div class="Pan"><div style="margin-left:60;">Copper Pan</div></td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">Use to gather ore from streams.</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);">2500g</td>
+				<td style="background-color:rgba(255, 255, 255, 0.7);border-radius: 0px 0px 20px 0px;">N/A</td>
+			</tr>
+		</table>
+				
 		</div>
 		
 		<footer>
