--- a/2QProjArgonPera/htdocs/Mining-Quartz.html
+++ b/2QProjArgonPera/htdocs/Mining-Quartz.html
@@ -10,6 +10,7 @@
 		<meta name="author" content="Akisha Pera">
 		<meta name="keywords" content="Stardew Valley Quartz">
 		<meta name="created" content="1-16-2022">
+		<meta name="revised" content="1-21-2022">
 		<style>
 		
 		</style>
@@ -39,7 +40,7 @@
 			</a>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 270px; width:505px; margin: -300px 0px 62px 300px;" >
+		<div style="background-color:#99DDFF; height: 270px; width:505px; margin: -300px 0px 62px 300px;border-radius: 20px 20px 20px 20px;" >
 			<p class="tagline">A clear crystal commonly found in caves and mines.</p>
 			<p>Quartz is a Mineral that can be found by foraging in The Mines and in Skull Cavern. It can also occasionally be found in Garbage Cans. 
 				Stone Golems have a 10% chance to drop Quartz when slain. A Ghostfish Fish Pond may produce 1 Quartz when the population reaches 3, and 3 
@@ -48,11 +49,11 @@
 			<p>Quartz can be used along with 1 coal in a furnace to produce Refined Quartz, taking 1.5 in-game hours to smelt.</p>
 		</div>
 		
-		<div style="background-color:#99DDFF; height: 260px; width:220px; margin: -325px 0px 62px 950px;" >
+		<div style="background-color:#99DDFF; height: 260px; width:220px; margin: -325px 0px 62px 950px;border-radius: 20px 20px 20px 20px;" >
 		
-		<table style="border: #FFFFCC 2px solid; height: 260px; width:220px;">
+		<table style="border: #FFFFCC 2px solid; height: 260px; width:220px;border-radius: 20px 20px 20px 20px;	">
 			<tr style="background-color:#FFFFE6;">
-				<th colspan="2">Information</th>
+				<th colspan="2" style="border-radius: 20px 20px 0px 0px;">Information</th>
 			</tr>
 			<tr>
 				<td rowspan="3" style="background-color:#FFFFE6;width:50px;">Source:</td>
@@ -69,7 +70,7 @@
 				<td>25g</td>
 			</tr>
 			<tr>
-				<td style="background-color:#FFFFE6;width:50px;">Gemologist Profession: (+30% Sell Price)</td>
+				<td style="background-color:#FFFFE6;width:50px;border-radius: 0px 0px 0px 20px;">Gemologist Profession: (+30% Sell Price)</td>
 				<td>32g</td>
 			</tr>
 		</table>
