--- a/2QProjArgonPera/index.html
+++ b/2QProjArgonPera/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="Akisha Pera">
 		<meta name="keywords" content="Info about Stardew Valley">
 		<meta name="created" content="11-03-2021">
-		<meta name="revised" content="01-16-2022">
+		<meta name="revised" content="01-21-2022">
 	
 	</head>
 	<body style="background-color:#FFFFE6;">
@@ -34,7 +34,7 @@
 			<a href="images/SVLogo.png">
 				<img src="images/SVLogo.png" alt="Game Logo" style="margin:30px;float:left;" height= 300px width=600px title="From Stardew Valley Wiki">
 			</a>
-			<h1> Description of the Game </h1>          
+			<h1 class="title"> Description of the Game </h1>          
 			<p class="desc">Stardew Valley is an open-ended country-life RPG! You've gotten tired of your boring and repetative city life, which means only one thing, it's time to open up Grandpa's letter! 
 				In it you find the deed to your grandpa's farm and a note encouraging you to leave your life behind to go live there.
 				Armed with hand-me-down tools and a few coins, you set out to begin your new life.
@@ -47,8 +47,8 @@
 		<a href="images/Map.png">
 			<img src="images/Map.png" alt="Map of the Game" style="margin:30px;" height=500px width=1280px title="From Stardew Valley Wiki">
 		</a>
-		<div id="ToC" style="background-color: #99DDFF; margin:30px;padding:15px; height:1000px; width: 1280px;">
-			<div style="background-color:#FFFFE6; margin:5px; height:490px; width:310px;">
+		<div id="ToC" style="background-color: #99DDFF; margin-left:13px;margin-bottom:50;padding:15px; height:1000px; width: 1280px;border-radius: 20px 20px 20px 20px;">
+			<div style="background-color:#FFFFE6; margin:5px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/Hoe.png">
 					<img src="images/Hoe.png" alt="Hoe" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
@@ -70,7 +70,7 @@
 					<li><a href="htdocs/Farming-Cranberries.html"> Cranberries </a></li>
 				</ul>
 			</div>
-			<div style="background-color:#FFFFE6; margin-top:-495px; margin-left:325px; height:490px; width:310px;">
+			<div style="background-color:#FFFFE6; margin-top:-495px; margin-left:325px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/Pickaxe.png">
 					<img src="images/Pickaxe.png" alt="Pickaxe" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
@@ -92,7 +92,7 @@
 					<li><a href="htdocs/Mining-Opal.html"> Opal </a></li>
 				</ul>
 			</div>
-			<div style="background-color:#FFFFE6; margin-top:-490px; margin-left:645px; height:490px; width:310px;">
+			<div style="background-color:#FFFFE6; margin-top:-490px; margin-left:645px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/Fishing-Rod.png">
 					<img src="images/Fishing-Rod.png" alt="Fishing Rod" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
@@ -114,7 +114,7 @@
 					<li><a href="htdocs/Fishing-Pike.html"> Pike </a></li>
 				</ul>				
 			</div>
-			<div style="background-color:#FFFFE6; margin-top:-490px; margin-left:965px; height:490px; width:310px;">
+			<div style="background-color:#FFFFE6; margin-top:-490px; margin-left:965px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/Flower.png">
 					<img src="images/Flower.png" alt="Flower" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
@@ -136,7 +136,7 @@
 					<li><a href="htdocs/Foraging-Holly.html"> Holly </a></li>
 				</ul>				
 			</div>
-			<div style="background-color:#FFFFE6;margin-top:10px; margin-left:160px; height:490px; width:310px;">
+			<div style="background-color:#FFFFE6;margin-top:10px; margin-left:160px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/Sword.png">
 					<img src="images/Sword.png" alt="Sword" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
@@ -158,7 +158,7 @@
 					<li><a href="htdocs/Combat-Serpent.html"> Serpent </a></li>
 				</ul>				
 			</div>
-			<div style="background-color:#FFFFE6;margin-top:-490px; margin-left:480px; height:490px; width:310px;">
+			<div style="background-color:#FFFFE6;margin-top:-490px; margin-left:480px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/Heart.png">
 					<img src="images/Heart.png" alt="Heart" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
@@ -180,7 +180,7 @@
 					<li><a href="htdocs/Characters-Marnie.html"> Marnie </a></li>
 				</ul>
 			</div>
-			<div style="background-color:#FFFFE6;margin-top:-490px; margin-left:800px; height:490px; width:310px;">
+			<div style="background-color:#FFFFE6;margin-top:-490px; margin-left:800px; height:490px; width:310px;border-radius: 20px 20px 20px 20px;">
 				<a href="images/House.png">
 					<img src="images/House.png" alt="House" style="margin: 10px;" height=80px width=80px title="From Stardew Valley Wiki">
 				</a>
